--- a/Frontend/src/app/layout/navbar/navbar.component.html
+++ b/Frontend/src/app/layout/navbar/navbar.component.html
@@ -1,9 +1,8 @@
 <div class="sticky top-0 border-bottom-1 border-gray-200 shadow-1 z-1">
   <p-toolbar [styleClass]="'bg-white border-top-none border-x-none border-noround'
 + 'sm:flex sm:justify-content-center sm:w-full md:flex md:justify-content-between px-8'">
-    <div class="p-toolbar-group-start pl-1 sm:hidden md:flex cursor-pointer" routerLink="/">
-      <fa-icon [icon]="['fab', 'airbnb']" size="3x" class="text-primary"></fa-icon>
-      <div class="font-bold text-primary pl-2 text-2xl">airbnb</div>
+    <div class="p-toolbar-group-start pl-1 sm:hidden md:flex align-items-center cursor-pointer" routerLink="/">
+      <img src="./assets/images/logo.png" alt="CasaHub Logo" style="height: 70px;" class="mr-2">
     </div>
     <div class="p-toolbar-group-center bg-white border-round-3xl p-0 border-1
 border-gray-300 shadow-1 hover:shadow-2 middle-group search flex justify-content-around" (click)="openNewSearch()">
@@ -25,7 +24,7 @@ border-none bg-white text-dark focus:shadow-none">
     </div>
     <div class="p-toolbar-group-end sm:hidden md:flex">
       @if(authService.isAuthenticated()){
-        <a class="p-button p-button-link" (click)="openNewListing()">Airbnb your home</a>
+        <a class="p-button p-button-link" (click)="openNewListing()">List your home now</a>
       }
       <p-menu #menu [model]="currentMenuItems" [popup]="true" styleClass="border-round-xl mt-1"></p-menu>
       <button (click)="menu.toggle($event)" class="menu flex align-content-center
