--- a/Frontend/src/app/layout/footer/footer.component.scss
+++ b/Frontend/src/app/layout/footer/footer.component.scss
@@ -2,10 +2,18 @@
 
 .footer {
   background-color: $footerBgColor;
-}
 
-fa-icon {
-  margin-left: 10px;
-  font-size: 3px;
-  margin-right: 10px;
+  .footer-section {
+    h3 {
+      font-weight: 600;
+    }
+
+    ul li a {
+      transition: color 0.2s ease;
+
+      &:hover {
+        color: #222;
+      }
+    }
+  }
 }
